# cg69

./: CMakeLists.txt  algorithm.cpp  algorithm.h  camera.cpp  camera.h  expressionparser.cpp  expressionparser.h  figures.cpp  figures.h  gui.cpp  gui.h  indexpolygon.cpp  indexpolygon.h  indexvertex.cpp  indexvertex.h  lightsource.cpp  lightsource.h  line.cpp  line.h  main.cpp  matrix.cpp  matrix.h  object.cpp  object.h  pixbuf.cpp  pixbuf.h  pixel.cpp  pixel.h  polygon.cpp  polygon.h  transform.cpp  transform.h  vertex.cpp  vertex.h
figures/: cube.json  cube_poly.json  dodecahedron.json  dodecahedron_poly.json  icosahedron.json  icosahedron_poly.json  octahedron.json  octahedron_poly.json  tetrahedron.json  tetrahedron_poly.json
